--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
   "plugins": [
     "react",
     "react-native",
+    "react-hooks",
     "jsx-a11y",
     "import",
     "prettier"
@@ -32,7 +33,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react/jsx-filename-extension": [
-      "error",
+      "warn",
       {
         "extensions": [
           ".js",
@@ -41,6 +42,15 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "no-param-reassign": "off",
+    "no-console": [
+      "error",
+      {
+        "allow": [
+          "tron"
+        ]
+      }
+    ],
     "no-unused-vars": [
       "error",
       {
@@ -51,13 +61,8 @@
     "react-native/no-color-literals": "off",
     "react-native/sort-styles": "off",
     "global-require": "off",
-    "react-native/no-raw-text": "off"
-  },
-  "settings": {
-    "import/resolver": {
-      "babel-plugin-root-import": {
-        "rootPathSuffix": "src"
-      }
-    }
+    "react-native/no-raw-text": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
