--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-react-native": "latest",
     "prettier": "latest",
-    "reactotron-react-js": "latest"
+    "reactotron-react-js": "latest",
+    "customize-cra": "latest",
+    "react-app-rewired": "latest",
+    "babel-plugin-root-import": "latest",
+    "eslint-import-resolver-babel-plugin-root-import": "latest",
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "browserslist": {
