--- a/package.json
+++ b/package.json
@@ -3,31 +3,32 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "latest",
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "latest",
     "react-scripts": "latest",
-    "styled-components": "latest",
-    "prop-types": "latest",
-    "reactotron-react-js": "latest"
+    "reactotron-react-js": "latest",
+    "styled-components": "latest"
   },
   "devDependencies": {
+    "babel-plugin-root-import": "latest",
     "babel-plugin-styled-components": "latest",
+    "customize-cra": "latest",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
     "eslint-config-prettier": "latest",
+    "eslint-import-resolver-babel-plugin-root-import": "latest",
     "eslint-plugin-html": "latest",
     "eslint-plugin-import": "latest",
+    "eslint-plugin-import-helpers": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-prettier": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-react-native": "latest",
     "prettier": "latest",
-    "customize-cra": "latest",
-    "react-app-rewired": "latest",
-    "babel-plugin-root-import": "latest",
-    "eslint-import-resolver-babel-plugin-root-import": "latest"
+    "react-app-rewired": "latest"
   },
   "scripts": {
     "start": "react-app-rewired start",
